# goal-agent

./: README.md  pyproject.toml
goal_agent/: __init__.py  agent.py  cli.py  tracker.py
