[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goal-agent-ai"
version = "0.1.0"
description = "AI-powered goal tracking agent: break goals into tasks, track progress, send nudges."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Goal Agent", email = "goal-agent@example.com" },
]
keywords = ["anthropic", "claude", "goals", "productivity", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
goal-agent = "goal_agent.cli:main"

[project.urls]
Homepage = "https://github.com/example/goal-agent-ai"
Issues = "https://github.com/example/goal-agent-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["goal_agent"]
